--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = tests.test_settings
 python_files = tests.py test_*.py *_tests.py
-addopts = --tb=short --strict-markers
+addopts = --tb=short --strict-markers --nomigrations
 testpaths = tests
